# lattica

bindings/python/src/: core.rs
lattica/: Cargo.toml
lattica/src/common/: types.rs
lattica/src/network/: behaviour.rs  core.rs  handle.rs  store.rs
lattica/src/rpc/: protocol.rs
